--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,8 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+scripts/clean-hybrid.txt
+scripts/defrag.txt
+scripts/full-hibernate.txt
+scripts/full-shutdown.txt
+scripts/full.txt
